[gd_scene load_steps=52 format=3 uid="uid://bwq62jtaqi3go"]

[ext_resource type="Script" path="res://Other/triple_cleave.gd" id="1_5jh77"]
[ext_resource type="PackedScene" uid="uid://0pky6xno0lib" path="res://Hitbox and Hurtbox/hitbox.tscn" id="2_rxa1n"]
[ext_resource type="Shader" path="res://Other/hightlight.gdshader" id="3_6h18i"]
[ext_resource type="Shader" path="res://Levels/disable.gdshader" id="5_4vqty"]
[ext_resource type="Texture2D" uid="uid://wcrmf8b1ldna" path="res://sprites/DepressionBoss/telegraphs/protean.png" id="5_elujd"]
[ext_resource type="Texture2D" uid="uid://c5oqhsovh2epb" path="res://Utilities/Effects/Wind_Shout_Burst_White_v6_spritesheet.png" id="6_8cqu2"]
[ext_resource type="Texture2D" uid="uid://d0yh0824alk1q" path="res://Utilities/Effects/particlefx/Impact_Wind_White_v6_spritesheet.png" id="7_1vknd"]
[ext_resource type="AudioStream" uid="uid://bmg5i0v20muw7" path="res://audio/sfx/Boss0/1_spit.wav" id="8_huyh3"]

[sub_resource type="Gradient" id="Gradient_vdhan"]
colors = PackedColorArray(0.998507, 0.526368, 0.467245, 0.584314, 0.998393, 0.510826, 0.451085, 0.482353)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_bd6cr"]
gradient = SubResource("Gradient_vdhan")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_sahvt"]
shader = ExtResource("3_6h18i")
shader_parameter/size_effect = 0.1
shader_parameter/highlight_strength = 0.8
shader_parameter/color_mode_toggle = true
shader_parameter/is_horizontal = true
shader_parameter/progress = 0.4
shader_parameter/color_gradient = SubResource("GradientTexture1D_bd6cr")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_l0bin"]
shader = ExtResource("5_4vqty")

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_u8ul7"]
blend_mode = 2

[sub_resource type="AtlasTexture" id="AtlasTexture_p0f24"]
atlas = ExtResource("6_8cqu2")
region = Rect2(0, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_5rj31"]
atlas = ExtResource("6_8cqu2")
region = Rect2(512, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_7wp8e"]
atlas = ExtResource("6_8cqu2")
region = Rect2(1024, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_wvsmv"]
atlas = ExtResource("6_8cqu2")
region = Rect2(1536, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_3dcyw"]
atlas = ExtResource("6_8cqu2")
region = Rect2(0, 512, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_r1726"]
atlas = ExtResource("6_8cqu2")
region = Rect2(512, 512, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_s0kjs"]
atlas = ExtResource("6_8cqu2")
region = Rect2(1024, 512, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_tr3g6"]
atlas = ExtResource("6_8cqu2")
region = Rect2(1536, 512, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_2jx21"]
atlas = ExtResource("6_8cqu2")
region = Rect2(0, 1024, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_ojd21"]
atlas = ExtResource("6_8cqu2")
region = Rect2(512, 1024, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_hyikf"]
atlas = ExtResource("6_8cqu2")
region = Rect2(1024, 1024, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_55qvq"]
atlas = ExtResource("6_8cqu2")
region = Rect2(1536, 1024, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_b7ywr"]
atlas = ExtResource("6_8cqu2")
region = Rect2(0, 1536, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_725v2"]
atlas = ExtResource("6_8cqu2")
region = Rect2(512, 1536, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_3wmaw"]
atlas = ExtResource("6_8cqu2")
region = Rect2(1024, 1536, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_kuvdx"]
atlas = ExtResource("6_8cqu2")
region = Rect2(1536, 1536, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_0dww1"]
atlas = ExtResource("7_1vknd")
region = Rect2(0, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_mtr03"]
atlas = ExtResource("7_1vknd")
region = Rect2(512, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_2jbp4"]
atlas = ExtResource("7_1vknd")
region = Rect2(1024, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_35moj"]
atlas = ExtResource("7_1vknd")
region = Rect2(1536, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_qr8v8"]
atlas = ExtResource("7_1vknd")
region = Rect2(0, 512, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_ctfyc"]
atlas = ExtResource("7_1vknd")
region = Rect2(512, 512, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_oshxe"]
atlas = ExtResource("7_1vknd")
region = Rect2(1024, 512, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_78tei"]
atlas = ExtResource("7_1vknd")
region = Rect2(1536, 512, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_bseqm"]
atlas = ExtResource("7_1vknd")
region = Rect2(0, 1024, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_7uji0"]
atlas = ExtResource("7_1vknd")
region = Rect2(512, 1024, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_58lus"]
atlas = ExtResource("7_1vknd")
region = Rect2(1024, 1024, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_xs3sf"]
atlas = ExtResource("7_1vknd")
region = Rect2(1536, 1024, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_u08wk"]
atlas = ExtResource("7_1vknd")
region = Rect2(0, 1536, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_6v5ia"]
atlas = ExtResource("7_1vknd")
region = Rect2(512, 1536, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_rdtx6"]
atlas = ExtResource("7_1vknd")
region = Rect2(1024, 1536, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_4jxif"]
atlas = ExtResource("7_1vknd")
region = Rect2(1536, 1536, 512, 512)

[sub_resource type="SpriteFrames" id="SpriteFrames_23guf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p0f24")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5rj31")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7wp8e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wvsmv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3dcyw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r1726")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s0kjs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tr3g6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2jx21")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ojd21")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hyikf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_55qvq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b7ywr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_725v2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3wmaw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kuvdx")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"default",
"speed": 30.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0dww1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mtr03")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2jbp4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_35moj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qr8v8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ctfyc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oshxe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_78tei")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bseqm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7uji0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_58lus")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xs3sf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u08wk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6v5ia")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rdtx6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4jxif")
}],
"loop": false,
"name": &"new_animation",
"speed": 35.0
}]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_qspqt"]

[sub_resource type="SpriteFrames" id="SpriteFrames_5ho7u"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p0f24")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5rj31")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7wp8e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wvsmv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3dcyw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r1726")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s0kjs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tr3g6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2jx21")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ojd21")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hyikf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_55qvq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b7ywr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_725v2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3wmaw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kuvdx")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"default",
"speed": 30.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0dww1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mtr03")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2jbp4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_35moj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qr8v8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ctfyc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oshxe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_78tei")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bseqm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7uji0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_58lus")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xs3sf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u08wk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6v5ia")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rdtx6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4jxif")
}],
"loop": false,
"name": &"new_animation",
"speed": 25.0
}]

[sub_resource type="Animation" id="Animation_dbdpg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpitAim/HitboxSpit/RedSpitTelegraph:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpitAim/HitboxSpit/Collision:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("spit_audio:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_w0woj"]
resource_name = "spit_attack_left"
length = 1.99921
step = 0.0833
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpitAim/HitboxSpit/RedSpitTelegraph:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.482353), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpitAim/HitboxSpit/RedSpitTelegraph:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"cleave_vfx"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SpitAim/HitboxSpit/RedSpitTelegraph:top_level")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("SpitAim/HitboxSpit/Collision:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1, 1.08333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("spit_audio:playing")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.93715),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "method"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"camera_shake"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xrud8"]
_data = {
"RESET": SubResource("Animation_dbdpg"),
"cleave_attack": SubResource("Animation_w0woj")
}

[node name="TripleCleave" type="Node2D"]
z_index = 1
z_as_relative = false
script = ExtResource("1_5jh77")

[node name="SpitAim" type="Marker2D" parent="."]

[node name="HitboxSpit" parent="SpitAim" instance=ExtResource("2_rxa1n")]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" parent="SpitAim/HitboxSpit" index="0"]
visible = false

[node name="CollisionPolygon2D" parent="SpitAim/HitboxSpit" index="1"]
visible = false

[node name="RedSpitTelegraph" type="Sprite2D" parent="SpitAim/HitboxSpit"]
visible = false
self_modulate = Color(1, 1, 1, 0)
show_behind_parent = true
material = SubResource("ShaderMaterial_sahvt")
scale = Vector2(0.8, 0.8)
texture = ExtResource("5_elujd")

[node name="Collision" type="CollisionPolygon2D" parent="SpitAim/HitboxSpit"]
visible = false
scale = Vector2(0.8, 0.8)
polygon = PackedVector2Array(141, -48, 141, -47, 138, -47, 138, -46, 135, -46, 135, -45, 132, -45, 132, -44, 129, -44, 129, -43, 126, -43, 126, -42, 123, -42, 123, -41, 120, -41, 120, -40, 117, -40, 117, -39, 114, -39, 114, -38, 111, -38, 111, -37, 108, -37, 108, -36, 105, -36, 105, -35, 102, -35, 102, -34, 99, -34, 99, -33, 96, -33, 96, -32, 93, -32, 93, -31, 90, -31, 90, -30, 87, -30, 87, -29, 84, -29, 84, -28, 81, -28, 81, -27, 78, -27, 78, -26, 75, -26, 75, -25, 72, -25, 72, -24, 69, -24, 69, -23, 66, -23, 66, -22, 63, -22, 63, -21, 60, -21, 60, -20, 57, -20, 57, -19, 54, -19, 54, -18, 51, -18, 51, -17, 47, -17, 47, -16, 44, -16, 44, -15, 41, -15, 41, -14, 38, -14, 38, -13, 35, -13, 35, -12, 32, -12, 32, -11, 29, -11, 29, -10, 26, -10, 26, -9, 23, -9, 23, -8, 20, -8, 20, -7, 17, -7, 17, -6, 14, -6, 14, -5, 11, -5, 11, -4, 8, -4, 8, -3, 5, -3, 5, -2, 2, -2, 2, -1, 0, -1, 0, 1, 2, 1, 2, 2, 5, 2, 5, 3, 8, 3, 8, 4, 11, 4, 11, 5, 14, 5, 14, 6, 17, 6, 17, 7, 20, 7, 20, 8, 23, 8, 23, 9, 26, 9, 26, 10, 29, 10, 29, 11, 32, 11, 32, 12, 35, 12, 35, 13, 38, 13, 38, 14, 41, 14, 41, 15, 44, 15, 44, 16, 47, 16, 47, 17, 51, 17, 51, 18, 54, 18, 54, 19, 57, 19, 57, 20, 60, 20, 60, 21, 63, 21, 63, 22, 66, 22, 66, 23, 69, 23, 69, 24, 72, 24, 72, 25, 75, 25, 75, 26, 78, 26, 78, 27, 81, 27, 81, 28, 84, 28, 84, 29, 87, 29, 87, 30, 90, 30, 90, 31, 93, 31, 93, 32, 96, 32, 96, 33, 99, 33, 99, 34, 102, 34, 102, 35, 105, 35, 105, 36, 108, 36, 108, 37, 111, 37, 111, 38, 114, 38, 114, 39, 117, 39, 117, 40, 120, 40, 120, 41, 123, 41, 123, 42, 126, 42, 126, 43, 129, 43, 129, 44, 132, 44, 132, 45, 134, 45, 134, 46, 137, 46, 137, 47, 141, 47, 141, 48, 145, 48, 145, 47, 146, 47, 146, 46, 148, 46, 148, 45, 149, 45, 149, 44, 150, 44, 150, 43, 151, 43, 151, 42, 153, 42, 153, 41, 154, 41, 154, 40, 155, 40, 155, 39, 156, 39, 156, 37, 157, 37, 157, 36, 158, 36, 158, 35, 159, 35, 159, 34, 160, 34, 160, 32, 161, 32, 161, 31, 162, 31, 162, 29, 163, 29, 163, 28, 164, 28, 164, 26, 165, 26, 165, 24, 166, 24, 166, 22, 167, 22, 167, 19, 168, 19, 168, 16, 169, 16, 169, 12, 170, 12, 170, 7, 171, 7, 171, -7, 170, -7, 170, -12, 169, -12, 169, -16, 168, -16, 168, -19, 167, -19, 167, -22, 166, -22, 166, -24, 165, -24, 165, -26, 164, -26, 164, -28, 163, -28, 163, -29, 162, -29, 162, -31, 161, -31, 161, -32, 160, -32, 160, -34, 159, -34, 159, -35, 158, -35, 158, -36, 157, -36, 157, -37, 156, -37, 156, -39, 155, -39, 155, -40, 154, -40, 154, -41, 153, -41, 153, -42, 151, -42, 151, -43, 150, -43, 150, -44, 149, -44, 149, -45, 148, -45, 148, -46, 146, -46, 146, -47, 145, -47, 145, -48)
disabled = true

[node name="SpitAttack" type="Sprite2D" parent="SpitAim/HitboxSpit"]
clip_children = 2
material = SubResource("ShaderMaterial_l0bin")
scale = Vector2(0.8, 0.8)
texture = ExtResource("5_elujd")

[node name="SpitAttackWhite" type="AnimatedSprite2D" parent="SpitAim/HitboxSpit/SpitAttack"]
material = SubResource("CanvasItemMaterial_u8ul7")
rotation = 1.57079
scale = Vector2(0.95, 0.95)
sprite_frames = SubResource("SpriteFrames_23guf")
frame = 16
frame_progress = 1.0

[node name="SpitAttackRed" type="AnimatedSprite2D" parent="SpitAim/HitboxSpit/SpitAttack"]
modulate = Color(0.840705, 0.155577, 0.184382, 1)
material = SubResource("CanvasItemMaterial_qspqt")
rotation = -0.785397
scale = Vector2(0.95, 0.95)
sprite_frames = SubResource("SpriteFrames_5ho7u")
frame = 16
frame_progress = 1.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xrud8")
}

[node name="spit_audio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_huyh3")
volume_db = 5.0
bus = &"SFX"

[editable path="SpitAim/HitboxSpit"]
